--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "slugify": "^1.6.6"
   }
 }
