added sms send logic

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=esteem_cars
 NODE_ENV=development
+CLICKSEND_USER="sales@esteemcars.co.nz"
+CLICKSEND_API="7B6586BD-AB79-CC69-2DA3-69B8600BF66A"
