--- a/package.json
+++ b/package.json
@@ -32,18 +32,24 @@
   },
   "homepage": "https://github.com/coolboyalan/esteem-car-backend#readme",
   "dependencies": {
+    "@types/node": "^22.14.0",
     "bcryptjs": "^3.0.2",
+    "bluebird": "^3.7.2",
+    "clicksend": "^5.0.79",
     "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "request": "^2.88.2",
     "sequelize": "^6.37.5",
     "sharp": "^0.33.5",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "typescript": "^5.8.2"
   }
 }
