--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "request": "^2.88.2",
     "sequelize": "^6.37.5",
     "sharp": "^0.33.5",
