fixed otp breach

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DB_NAME=esteem_cars
 NODE_ENV=development
 CLICKSEND_USER="sales@esteemcars.co.nz"
 CLICKSEND_API="7B6586BD-AB79-CC69-2DA3-69B8600BF66A"
+LOGO="https://esteemfinance.co.nz/assets/esteemf.svg"
+SMTP_USER="esteemcars77@gmail.com"
+SMTP_PASS="dobd nyij biws vbrt"
